@@ -1,4 +1,4 @@
-// Copyright 2014 The Bazel Authors. All rights reserved.
+// Copyright 2019 The Bazel Authors. All rights reserved.
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -11,9 +11,13 @@
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
+//
 
 package com.google.devtools.build.lib.bazel;
 
+import com.google.common.base.Optional;
+import com.google.common.base.Strings;
+import com.google.common.base.Supplier;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -21,17 +25,15 @@ import com.google.common.collect.Maps;
 import com.google.devtools.build.lib.analysis.BlazeDirectories;
 import com.google.devtools.build.lib.analysis.ConfiguredRuleClassProvider;
 import com.google.devtools.build.lib.analysis.RuleDefinition;
+import com.google.devtools.build.lib.analysis.config.BuildConfiguration;
 import com.google.devtools.build.lib.bazel.commands.FetchCommand;
-import com.google.devtools.build.lib.bazel.repository.GitRepositoryFunction;
-import com.google.devtools.build.lib.bazel.repository.HttpArchiveFunction;
-import com.google.devtools.build.lib.bazel.repository.HttpFileFunction;
-import com.google.devtools.build.lib.bazel.repository.HttpJarFunction;
+import com.google.devtools.build.lib.bazel.commands.SyncCommand;
+import com.google.devtools.build.lib.bazel.repository.LocalConfigPlatformFunction;
+import com.google.devtools.build.lib.bazel.repository.LocalConfigPlatformRule;
 import com.google.devtools.build.lib.bazel.repository.MavenDownloader;
 import com.google.devtools.build.lib.bazel.repository.MavenJarFunction;
 import com.google.devtools.build.lib.bazel.repository.MavenServerFunction;
 import com.google.devtools.build.lib.bazel.repository.MavenServerRepositoryFunction;
-import com.google.devtools.build.lib.bazel.repository.NewGitRepositoryFunction;
-import com.google.devtools.build.lib.bazel.repository.NewHttpArchiveFunction;
 import com.google.devtools.build.lib.bazel.repository.RepositoryOptions;
 import com.google.devtools.build.lib.bazel.repository.RepositoryOptions.RepositoryOverride;
 import com.google.devtools.build.lib.bazel.repository.cache.RepositoryCache;
@@ -42,22 +44,19 @@ import com.google.devtools.build.lib.bazel.rules.android.AndroidNdkRepositoryFun
 import com.google.devtools.build.lib.bazel.rules.android.AndroidNdkRepositoryRule;
 import com.google.devtools.build.lib.bazel.rules.android.AndroidSdkRepositoryFunction;
 import com.google.devtools.build.lib.bazel.rules.android.AndroidSdkRepositoryRule;
-import com.google.devtools.build.lib.bazel.rules.workspace.GitRepositoryRule;
-import com.google.devtools.build.lib.bazel.rules.workspace.HttpArchiveRule;
-import com.google.devtools.build.lib.bazel.rules.workspace.HttpFileRule;
-import com.google.devtools.build.lib.bazel.rules.workspace.HttpJarRule;
 import com.google.devtools.build.lib.bazel.rules.workspace.MavenJarRule;
 import com.google.devtools.build.lib.bazel.rules.workspace.MavenServerRule;
-import com.google.devtools.build.lib.bazel.rules.workspace.NewGitRepositoryRule;
-import com.google.devtools.build.lib.bazel.rules.workspace.NewHttpArchiveRule;
 import com.google.devtools.build.lib.cmdline.RepositoryName;
+import com.google.devtools.build.lib.events.Event;
 import com.google.devtools.build.lib.pkgcache.PackageCacheOptions;
 import com.google.devtools.build.lib.rules.repository.LocalRepositoryFunction;
 import com.google.devtools.build.lib.rules.repository.LocalRepositoryRule;
+import com.google.devtools.build.lib.rules.repository.ManagedDirectoriesKnowledgeImpl;
+import com.google.devtools.build.lib.rules.repository.ManagedDirectoriesKnowledgeImpl.ManagedDirectoriesListener;
 import com.google.devtools.build.lib.rules.repository.NewLocalRepositoryFunction;
 import com.google.devtools.build.lib.rules.repository.NewLocalRepositoryRule;
 import com.google.devtools.build.lib.rules.repository.RepositoryDelegatorFunction;
-import com.google.devtools.build.lib.rules.repository.RepositoryDirectoryValue;
+import com.google.devtools.build.lib.rules.repository.RepositoryDirectoryDirtinessChecker;
 import com.google.devtools.build.lib.rules.repository.RepositoryFunction;
 import com.google.devtools.build.lib.rules.repository.RepositoryLoaderFunction;
 import com.google.devtools.build.lib.runtime.BlazeModule;
@@ -66,29 +65,33 @@ import com.google.devtools.build.lib.runtime.Command;
 import com.google.devtools.build.lib.runtime.CommandEnvironment;
 import com.google.devtools.build.lib.runtime.ServerBuilder;
 import com.google.devtools.build.lib.runtime.WorkspaceBuilder;
+import com.google.devtools.build.lib.runtime.commands.InfoItem;
 import com.google.devtools.build.lib.skyframe.MutableSupplier;
 import com.google.devtools.build.lib.skyframe.PrecomputedValue;
 import com.google.devtools.build.lib.skyframe.PrecomputedValue.Injected;
 import com.google.devtools.build.lib.skyframe.SkyFunctions;
-import com.google.devtools.build.lib.skyframe.SkyValueDirtinessChecker;
-import com.google.devtools.build.lib.util.io.TimestampGranularityMonitor;
+import com.google.devtools.build.lib.skylarkbuildapi.repository.RepositoryBootstrap;
+import com.google.devtools.build.lib.util.AbruptExitException;
+import com.google.devtools.build.lib.util.ExitCode;
 import com.google.devtools.build.lib.vfs.FileSystem;
+import com.google.devtools.build.lib.vfs.FileSystemUtils;
 import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.PathFragment;
-import com.google.devtools.build.skyframe.SkyKey;
-import com.google.devtools.build.skyframe.SkyValue;
+import com.google.devtools.build.lib.vfs.Root;
+import com.google.devtools.build.lib.vfs.RootedPath;
 import com.google.devtools.common.options.OptionsBase;
-import com.google.devtools.common.options.OptionsProvider;
+import com.google.devtools.common.options.OptionsParsingResult;
+import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
-import java.util.Map.Entry;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
-import javax.annotation.Nullable;
+import java.util.stream.Collectors;
 
-/**
- * Adds support for fetching external code.
- */
+/** Adds support for fetching external code. */
 public class BazelRepositoryModule extends BlazeModule {
+  // Default location (relative to output user root) of the repository cache.
+  public static final String DEFAULT_CACHE_LOCATION = "cache/repos/v1";
 
   // A map of repository handlers that can be looked up by rule class name.
   private final ImmutableMap<String, RepositoryFunction> repositoryHandlers;
@@ -100,108 +103,190 @@ public class BazelRepositoryModule extends BlazeModule {
   private final MutableSupplier<Map<String, String>> clientEnvironmentSupplier =
       new MutableSupplier<>();
   private ImmutableMap<RepositoryName, PathFragment> overrides = ImmutableMap.of();
+  private Optional<RootedPath> resolvedFile = Optional.absent();
+  private Optional<RootedPath> resolvedFileReplacingWorkspace = Optional.absent();
+  private Set<String> outputVerificationRules = ImmutableSet.of();
   private FileSystem filesystem;
+  // We hold the precomputed value of the managed directories here, so that the dependency
+  // on WorkspaceFileValue is not registered for each FileStateValue.
+  private final ManagedDirectoriesKnowledgeImpl managedDirectoriesKnowledge;
 
   public BazelRepositoryModule() {
     this.skylarkRepositoryFunction = new SkylarkRepositoryFunction(httpDownloader);
-    this.repositoryHandlers =
-        ImmutableMap.<String, RepositoryFunction>builder()
-            .put(LocalRepositoryRule.NAME, new LocalRepositoryFunction())
-            .put(HttpArchiveRule.NAME, new HttpArchiveFunction(httpDownloader))
-            .put(GitRepositoryRule.NAME, new GitRepositoryFunction(httpDownloader))
-            .put(HttpJarRule.NAME, new HttpJarFunction(httpDownloader))
-            .put(HttpFileRule.NAME, new HttpFileFunction(httpDownloader))
-            .put(MavenJarRule.NAME, new MavenJarFunction(mavenDownloader))
-            .put(NewHttpArchiveRule.NAME, new NewHttpArchiveFunction(httpDownloader))
-            .put(NewGitRepositoryRule.NAME, new NewGitRepositoryFunction(httpDownloader))
-            .put(NewLocalRepositoryRule.NAME, new NewLocalRepositoryFunction())
-            .put(AndroidSdkRepositoryRule.NAME, new AndroidSdkRepositoryFunction())
-            .put(AndroidNdkRepositoryRule.NAME, new AndroidNdkRepositoryFunction())
-            .put(MavenServerRule.NAME, new MavenServerRepositoryFunction())
-            .build();
+    this.repositoryHandlers = repositoryRules(httpDownloader, mavenDownloader);
+    ManagedDirectoriesListener listener =
+        repositoryNamesWithManagedDirs -> {
+          Set<String> conflicting =
+              overrides.keySet().stream()
+                  .filter(repositoryNamesWithManagedDirs::contains)
+                  .map(RepositoryName::getName)
+                  .collect(Collectors.toSet());
+          if (!conflicting.isEmpty()) {
+            String message =
+                "Overriding repositories is not allowed"
+                    + " for the repositories with managed directories.\n"
+                    + "The following overridden external repositories have managed directories: "
+                    + String.join(", ", conflicting.toArray(new String[0]));
+            throw new AbruptExitException(message, ExitCode.COMMAND_LINE_ERROR);
+          }
+        };
+    managedDirectoriesKnowledge = new ManagedDirectoriesKnowledgeImpl(listener);
   }
 
-  /**
-   * A dirtiness checker that always dirties {@link RepositoryDirectoryValue}s so that if they were
-   * produced in a {@code --nofetch} build, they are re-created no subsequent {@code --fetch}
-   * builds.
-   *
-   * <p>The alternative solution would be to reify the value of the flag as a Skyframe value.
-   */
-  private static final SkyValueDirtinessChecker REPOSITORY_VALUE_CHECKER =
-      new SkyValueDirtinessChecker() {
-        @Override
-        public boolean applies(SkyKey skyKey) {
-          return skyKey.functionName().equals(SkyFunctions.REPOSITORY_DIRECTORY);
-        }
+  public static ImmutableMap<String, RepositoryFunction> repositoryRules(
+      HttpDownloader httpDownloader, MavenDownloader mavenDownloader) {
+    return ImmutableMap.<String, RepositoryFunction>builder()
+        .put(LocalRepositoryRule.NAME, new LocalRepositoryFunction())
+        .put(MavenJarRule.NAME, new MavenJarFunction(mavenDownloader))
+        .put(NewLocalRepositoryRule.NAME, new NewLocalRepositoryFunction())
+        .put(AndroidSdkRepositoryRule.NAME, new AndroidSdkRepositoryFunction())
+        .put(AndroidNdkRepositoryRule.NAME, new AndroidNdkRepositoryFunction())
+        .put(MavenServerRule.NAME, new MavenServerRepositoryFunction())
+        .put(LocalConfigPlatformRule.NAME, new LocalConfigPlatformFunction())
+        .build();
+  }
 
-        @Override
-        public SkyValue createNewValue(SkyKey key, @Nullable TimestampGranularityMonitor tsgm) {
-          throw new UnsupportedOperationException();
-        }
+  private static class RepositoryCacheInfoItem extends InfoItem {
+    private final RepositoryCache repositoryCache;
 
-        @Override
-        public DirtyResult check(
-            SkyKey skyKey, SkyValue skyValue, @Nullable TimestampGranularityMonitor tsgm) {
-          RepositoryDirectoryValue repositoryValue = (RepositoryDirectoryValue) skyValue;
-          return repositoryValue.repositoryExists() && repositoryValue.isFetchingDelayed()
-              ? DirtyResult.dirty(skyValue)
-              : DirtyResult.notDirty(skyValue);
-        }
-      };
+    RepositoryCacheInfoItem(RepositoryCache repositoryCache) {
+      super("repository_cache", "The location of the repository download cache used");
+      this.repositoryCache = repositoryCache;
+    }
+
+    @Override
+    public byte[] get(Supplier<BuildConfiguration> configurationSupplier, CommandEnvironment env)
+        throws AbruptExitException, InterruptedException {
+      return print(repositoryCache.getRootPath());
+    }
+  }
 
   @Override
-  public void serverInit(OptionsProvider startupOptions, ServerBuilder builder) {
+  public void serverInit(OptionsParsingResult startupOptions, ServerBuilder builder) {
     builder.addCommands(new FetchCommand());
+    builder.addCommands(new SyncCommand());
+    builder.addInfoItems(new RepositoryCacheInfoItem(repositoryCache));
   }
 
   @Override
   public void workspaceInit(
       BlazeRuntime runtime, BlazeDirectories directories, WorkspaceBuilder builder) {
-    builder.addCustomDirtinessChecker(REPOSITORY_VALUE_CHECKER);
+    builder.setManagedDirectoriesKnowledge(managedDirectoriesKnowledge);
+
+    RepositoryDirectoryDirtinessChecker customDirtinessChecker =
+        new RepositoryDirectoryDirtinessChecker(
+            directories.getWorkspace(), managedDirectoriesKnowledge);
+    builder.addCustomDirtinessChecker(customDirtinessChecker);
     // Create the repository function everything flows through.
     builder.addSkyFunction(SkyFunctions.REPOSITORY, new RepositoryLoaderFunction());
-    builder.addSkyFunction(
-        SkyFunctions.REPOSITORY_DIRECTORY,
+    RepositoryDelegatorFunction repositoryDelegatorFunction =
         new RepositoryDelegatorFunction(
             repositoryHandlers,
             skylarkRepositoryFunction,
             isFetch,
             clientEnvironmentSupplier,
-            directories));
+            directories,
+            managedDirectoriesKnowledge);
+    builder.addSkyFunction(SkyFunctions.REPOSITORY_DIRECTORY, repositoryDelegatorFunction);
     builder.addSkyFunction(MavenServerFunction.NAME, new MavenServerFunction(directories));
-    filesystem = directories.getFileSystem();
+    filesystem = runtime.getFileSystem();
   }
 
   @Override
   public void initializeRuleClasses(ConfiguredRuleClassProvider.Builder builder) {
-    for (Entry<String, RepositoryFunction> handler : repositoryHandlers.entrySet()) {
+    for (Map.Entry<String, RepositoryFunction> handler : repositoryHandlers.entrySet()) {
       RuleDefinition ruleDefinition;
       try {
-        ruleDefinition = handler.getValue().getRuleDefinition().getDeclaredConstructor()
-            .newInstance();
-      } catch (IllegalAccessException | InstantiationException | NoSuchMethodException
+        ruleDefinition =
+            handler.getValue().getRuleDefinition().getDeclaredConstructor().newInstance();
+      } catch (IllegalAccessException
+          | InstantiationException
+          | NoSuchMethodException
           | InvocationTargetException e) {
         throw new IllegalStateException(e);
       }
       builder.addRuleDefinition(ruleDefinition);
     }
-    builder.addSkylarkModule(SkylarkRepositoryModule.class);
+    builder.addSkylarkBootstrap(new RepositoryBootstrap(new SkylarkRepositoryModule()));
   }
 
   @Override
   public void beforeCommand(CommandEnvironment env) {
-    clientEnvironmentSupplier.set(env.getActionClientEnv());
+    clientEnvironmentSupplier.set(env.getRepoEnv());
     PackageCacheOptions pkgOptions = env.getOptions().getOptions(PackageCacheOptions.class);
     isFetch.set(pkgOptions != null && pkgOptions.fetch);
+    resolvedFile = Optional.<RootedPath>absent();
+    resolvedFileReplacingWorkspace = Optional.<RootedPath>absent();
+    outputVerificationRules = ImmutableSet.<String>of();
 
     RepositoryOptions repoOptions = env.getOptions().getOptions(RepositoryOptions.class);
     if (repoOptions != null) {
-      if (repoOptions.experimentalRepositoryCache != null) {
-        Path repositoryCachePath = filesystem.getPath(repoOptions.experimentalRepositoryCache);
-        repositoryCache.setRepositoryCachePath(repositoryCachePath);
+      repositoryCache.setHardlink(repoOptions.useHardlinks);
+      if (repoOptions.experimentalScaleTimeouts > 0.0) {
+        skylarkRepositoryFunction.setTimeoutScaling(repoOptions.experimentalScaleTimeouts);
       } else {
-        repositoryCache.setRepositoryCachePath(null);
+        env.getReporter()
+            .handle(
+                Event.warn(
+                    "Ignoring request to scale timeouts for repositories by a non-positive"
+                        + " factor"));
+        skylarkRepositoryFunction.setTimeoutScaling(1.0);
+      }
+      if (repoOptions.experimentalRepositoryCache != null) {
+        // A set but empty path indicates a request to disable the repository cache.
+        if (!repoOptions.experimentalRepositoryCache.isEmpty()) {
+          Path repositoryCachePath;
+          if (repoOptions.experimentalRepositoryCache.isAbsolute()) {
+            repositoryCachePath = filesystem.getPath(repoOptions.experimentalRepositoryCache);
+          } else {
+            repositoryCachePath =
+                env.getBlazeWorkspace()
+                    .getWorkspace()
+                    .getRelative(repoOptions.experimentalRepositoryCache);
+          }
+          repositoryCache.setRepositoryCachePath(repositoryCachePath);
+        }
+      } else {
+        Path repositoryCachePath =
+            env.getDirectories()
+                .getServerDirectories()
+                .getOutputUserRoot()
+                .getRelative(DEFAULT_CACHE_LOCATION);
+        try {
+          FileSystemUtils.createDirectoryAndParents(repositoryCachePath);
+          repositoryCache.setRepositoryCachePath(repositoryCachePath);
+        } catch (IOException e) {
+          env.getReporter()
+              .handle(
+                  Event.warn(
+                      "Failed to set up cache at "
+                          + repositoryCachePath.toString()
+                          + ": "
+                          + e.getMessage()));
+        }
+      }
+
+      if (repoOptions.experimentalDistdir != null) {
+        httpDownloader.setDistdir(
+            repoOptions
+                .experimentalDistdir
+                .stream()
+                .map(
+                    path ->
+                        path.isAbsolute()
+                            ? filesystem.getPath(path)
+                            : env.getBlazeWorkspace().getWorkspace().getRelative(path))
+                .collect(Collectors.toList()));
+      } else {
+        httpDownloader.setDistdir(ImmutableList.<Path>of());
+      }
+
+      if (repoOptions.httpTimeoutScaling > 0) {
+        httpDownloader.setTimeoutScaling((float) repoOptions.httpTimeoutScaling);
+      } else {
+        env.getReporter()
+            .handle(Event.warn("Ingoring request to scale http timeouts by a non-positive factor"));
+        httpDownloader.setTimeoutScaling(1.0f);
       }
 
       if (repoOptions.repositoryOverrides != null) {
@@ -216,19 +301,60 @@ public class BazelRepositoryModule extends BlazeModule {
       } else {
         overrides = ImmutableMap.of();
       }
+
+      if (!Strings.isNullOrEmpty(repoOptions.repositoryHashFile)) {
+        Path hashFile;
+        if (env.getWorkspace() != null) {
+          hashFile = env.getWorkspace().getRelative(repoOptions.repositoryHashFile);
+        } else {
+          hashFile = filesystem.getPath(repoOptions.repositoryHashFile);
+        }
+        resolvedFile =
+            Optional.of(RootedPath.toRootedPath(Root.absoluteRoot(filesystem), hashFile));
+      }
+
+      if (!Strings.isNullOrEmpty(repoOptions.experimentalResolvedFileInsteadOfWorkspace)) {
+        Path resolvedFile;
+        if (env.getWorkspace() != null) {
+          resolvedFile =
+              env.getWorkspace()
+                  .getRelative(repoOptions.experimentalResolvedFileInsteadOfWorkspace);
+        } else {
+          resolvedFile = filesystem.getPath(repoOptions.experimentalResolvedFileInsteadOfWorkspace);
+        }
+        resolvedFileReplacingWorkspace =
+            Optional.of(RootedPath.toRootedPath(Root.absoluteRoot(filesystem), resolvedFile));
+      }
+
+      if (repoOptions.experimentalVerifyRepositoryRules != null) {
+        outputVerificationRules =
+            ImmutableSet.copyOf(repoOptions.experimentalVerifyRepositoryRules);
+      }
     }
   }
 
   @Override
   public ImmutableList<Injected> getPrecomputedValues() {
     return ImmutableList.of(
+        PrecomputedValue.injected(RepositoryDelegatorFunction.REPOSITORY_OVERRIDES, overrides),
         PrecomputedValue.injected(
-            RepositoryDelegatorFunction.REPOSITORY_OVERRIDES, overrides));
+            RepositoryDelegatorFunction.RESOLVED_FILE_FOR_VERIFICATION, resolvedFile),
+        PrecomputedValue.injected(
+            RepositoryDelegatorFunction.OUTPUT_VERIFICATION_REPOSITORY_RULES,
+            outputVerificationRules),
+        PrecomputedValue.injected(
+            RepositoryDelegatorFunction.RESOLVED_FILE_INSTEAD_OF_WORKSPACE,
+            resolvedFileReplacingWorkspace),
+        // That key will be reinjected by the sync command with a universally unique identifier.
+        // Nevertheless, we need to provide a default value for other commands.
+        PrecomputedValue.injected(
+            RepositoryDelegatorFunction.DEPENDENCY_FOR_UNCONDITIONAL_FETCHING,
+            RepositoryDelegatorFunction.DONT_FETCH_UNCONDITIONALLY));
   }
 
   @Override
   public Iterable<Class<? extends OptionsBase>> getCommandOptions(Command command) {
-    return ImmutableSet.of("fetch", "build", "query").contains(command.name())
+    return ImmutableSet.of("sync", "fetch", "build", "query").contains(command.name())
         ? ImmutableList.<Class<? extends OptionsBase>>of(RepositoryOptions.class)
         : ImmutableList.<Class<? extends OptionsBase>>of();
   }
